--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "python-multipart>=0.0.6",
     "pyyaml>=6.0.1",
     "python-dateutil>=2.8.2",
+    "psutil>=5.9.0",
 ]
 requires-python = ">=3.9"
 
@@ -21,4 +22,4 @@ build-backend = "pdm.backend"
 
 
 [tool.pdm]
-package-type = "library"
+distribution = true
