adapted radiotracking config format

--- a/configs/radiotracking.ini
+++ b/configs/radiotracking.ini
@@ -1,13 +1,13 @@
 [optional arguments]
 verbose = 0
-calibrate = false
-config = /boot/firmware/radiotracking.ini
-station = None
+calibrate = False
+config = '/boot/firmware/radiotracking.ini'
+; station = 'trackIT'
 schedule = []
 
 [rtl-sdr]
-device = [0, 1, 2, 3]
-calibration = [0.0, 0.0, 0.0, 0.0]
+device = ['0']
+calibration = [0.0]
 center_freq = 150155000
 sample_rate = 300000
 sdr_callback_length = None
@@ -16,11 +16,11 @@ lna_gain = 15
 mixer_gain = 14
 vga_gain = 7
 sdr_max_restart = 3
-sdr_timeout_s = 2.0
+sdr_timeout_s = 2
 
 [analysis]
 fft_nperseg = 256
-fft_window = hamming
+fft_window = 'hamming'
 signal_threshold_dbw = -95.0
 snr_threshold_db = 3.0
 signal_min_duration_ms = 8.0
@@ -33,18 +33,18 @@ matching_bandwidth_hz = 4000
 matching_duration_diff_ms = 5.0
 
 [publish]
-sig_stdout = false
-match_stdout = false
-path = data
-csv = true
-export_config = true
-mqtt = true
-mqtt_host = localhost
+sig_stdout = False
+match_stdout = False
+path = 'data'
+csv = True
+export_config = True
+mqtt = True
+mqtt_host = 'localhost'
 mqtt_port = 1883
 
 [dashboard]
-dashboard = true
-dashboard_host = localhost
+dashboard = True
+dashboard_host = 'localhost'
 dashboard_port = 8050
 dashboard_signals = 100
 
