--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pyyaml>=6.0.1",
     "python-dateutil>=2.8.2",
     "psutil>=5.9.0",
+    "sounddevice>=0.4.0",
 ]
 requires-python = ">=3.9"
 
