--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ authors = [
 ]
 dependencies = [
     "fastapi>=0.109.0",
-    "uvicorn>=0.27.0",
+    "uvicorn[standard]>=0.27.0",
+    "websockets>=12.0",
     "jinja2>=3.1.0",
     "python-multipart>=0.0.6",
     "pyyaml>=6.0.1",
