implemented datetime info

--- a/configs/tsconfig.yml
+++ b/configs/tsconfig.yml
@@ -10,17 +10,19 @@ system:
   status_refresh_interval: 5  # Default system status refresh interval in seconds
 
 services:
-  - name: chrony
-    expert: true
   - name: wittypid
     expert: false
+  - name: time-sync.target
+    expert: false
+  - name: radiotracking
+    expert: false 
+  - name: soundscapepipe
+    expert: false
+  - name: chrony
+    expert: true
   - name: wg-quick@wireguard
     expert: true
   - name: mosquitto
     expert: true
   - name: mqttutil
     expert: true 
-  - name: radiotracking
-    expert: false 
-  - name: soundscapepipe
-    expert: false
