added Dockerfile and Github Action for building

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,13 @@ dependencies = [
     "pyyaml>=6.0.1",
     "python-dateutil>=2.8.2",
     "psutil>=5.9.0",
-    "sounddevice>=0.4.0",
 ]
 requires-python = ">=3.9"
+
+[project.optional-dependencies]
+audio = [
+    "sounddevice>=0.4.0",
+]
 
 [build-system]
 requires = ["pdm-backend"]
