remove shell endpoint, run linter

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,9 @@ build-backend = "pdm.backend"
 
 [tool.pdm]
 distribution = true
+
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.format]
+line-ending = "auto"
