--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,4 +39,10 @@ line-ending = "auto"
 [dependency-groups]
 dev = [
     "httpx>=0.28.1",
+    "bleak>=1.1.1",
+]
+ble = [
+    "dbus-python>=1.3.2",
+    "pygobject>=3.42.0",
+    "httpx>=0.28.1",
 ]
