--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,9 +37,11 @@ line-ending = "auto"
 dev = [
     "httpx>=0.28.1",
     "bleak>=1.1.1",
+    "cbor2>=5.4.0",
 ]
 ble = [
     "dbus-python>=1.3.2",
     "pygobject>=3.42.0",
     "httpx>=0.28.1",
+    "cbor2>=5.4.0",
 ]
