removed sudo usage

--- a/configs/tsconfig.yml
+++ b/configs/tsconfig.yml
@@ -9,6 +9,10 @@ file_locations:
 system:
   status_refresh_interval: 5  # Default system status refresh interval in seconds
 
+# Shell settings
+shell:
+  user: "pi"  # User to run shell sessions as (login shell)
+
 services:
   - name: multi-user.target
     expert: true
