--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ dependencies = [
     "python-dateutil>=2.8.2",
     "psutil>=5.9.0",
     "httpx>=0.28.1",
+    "authlib>=1.3.0",
+    "itsdangerous>=2.1.0",
+    "python-jose[cryptography]>=3.3.0",
 ]
 requires-python = ">=3.9"
 
