--- a/configs/tsupdate.yml
+++ b/configs/tsupdate.yml
@@ -38,3 +38,23 @@ persist_timeout: 600
 # Default: 60 (1 minute)
 update_countdown: 60
 
+# Regular behavior (applies outside maintenance window or when no maintenance schedule)
+# What to do when checking for updates
+# Valid values: nothing, check, download, apply
+# - nothing: Skip update check entirely (default)
+# - check: Check for updates but don't download or apply
+# - download: Check and download updates but don't apply
+# - apply: Perform full update workflow (check → download → sync → apply → reboot)
+# Default: nothing
+do: nothing
+
+# Maintenance behavior (applies inside maintenance window)
+# How often to check for updates during maintenance window (in seconds)
+# Default: 3600 (1 hour)
+maintenance_check_interval: 3600
+
+# What to do when checking for updates during maintenance window
+# Valid values: nothing, check, download, apply
+# Default: check
+maintenance_do: check
+
