--- a/app/configs/model_files.yml
+++ b/app/configs/model_files.yml
@@ -3,11 +3,11 @@
 # when tsconfig runs in server mode (where actual filesystem cannot be scanned)
 
 birdedge:
-  - /home/pi/pybirdedge/birdedge/models/ger/MarBird_EFLO_GER.onnx
-  - /home/pi/pybirdedge/birdedge/models/ger/MarBird_R26d_GER.onnx
+  - /home/pi/pybirdedge/birdedge/models/ger/MarBird_EFL0_GER.onnx
 
 yolobat:
   - /home/pi/yolobat/models/yolobat11_2025.4.1.nor/model.xml
   - /home/pi/yolobat/models/yolobat11_2025.3.2/model.xml
   - /home/pi/yolobat/models/yolobat11_2025.6.2/model.xml
+  - /home/pi/yolobat/models/yolobat11_2026.1.1/model.xml
 
