--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ dependencies = [
 ]
 requires-python = ">=3.9"
 
+[project.scripts]
+tsconfig = "app.cli:main"
+
 [project.optional-dependencies]
 
 [build-system]
