--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,6 @@ dependencies = [
     "python-dateutil>=2.8.2",
     "psutil>=5.9.0",
     "httpx>=0.28.1",
-    "authlib>=1.3.0",
-    "itsdangerous>=2.1.0",
-    "python-jose[cryptography]>=3.3.0",
 ]
 requires-python = ">=3.9"
 
@@ -50,4 +47,9 @@ ble = [
     "dbus-python>=1.3.2",
     "pygobject>=3.42.0",
     "cbor2>=5.4.0",
+]
+auth = [
+    "authlib>=1.3.0",
+    "itsdangerous>=2.1.0",
+    "python-jose[cryptography]>=3.3.0",
 ]
